[gd_scene load_steps=10 format=4 uid="uid://cokd1uqacgy04"]

[ext_resource type="Script" path="res://Screens/Main/main.gd" id="1_u2ehh"]
[ext_resource type="AudioStream" uid="uid://ctwtkqkmno8v2" path="res://Assets/Audio/Infinity Crystal_ Awakening wavs/4 town INITIAL.wav" id="2_1bkyv"]
[ext_resource type="Script" path="res://Screens/Main/camera_2d.gd" id="3_hgxw2"]
[ext_resource type="TileSet" uid="uid://c1slwfmhusvdl" path="res://Assets/UI/Buttons.tres" id="4_fl154"]
[ext_resource type="Script" path="res://Screens/Main/buttons.gd" id="4_ryu81"]
[ext_resource type="AudioStream" uid="uid://2u1i5jmfnl2m" path="res://Assets/Audio/10_UI_Menu_SFX/001_Hover_01.wav" id="5_esgvy"]
[ext_resource type="AudioStream" uid="uid://58g4ecpevtif" path="res://Assets/Audio/10_UI_Menu_SFX/013_Confirm_03.wav" id="6_44t26"]

[sub_resource type="SystemFont" id="SystemFont_wku7k"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_g7m6i"]
font = SubResource("SystemFont_wku7k")
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_u2ehh")
music = ExtResource("2_1bkyv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 321)
script = ExtResource("3_hgxw2")

[node name="main_ui" type="MarginContainer" parent="Camera2D"]
offset_left = -578.5
offset_top = -322.0
offset_right = 578.5
offset_bottom = 322.0
theme_override_constants/margin_top = 161

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/main_ui"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/main_ui/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="seperator" type="Control" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="new_project" type="Button" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
script = ExtResource("4_ryu81")

[node name="full" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/new_project"]
tile_map_data = PackedByteArray("AAABAAEAAwAGAAQAAAACAAEAAwAGAAQAAAADAAEAAwAGAAQAAAAEAAEAAwAGAAQAAAAFAAEAAwAGAAQAAAAGAAEAAwAGAAQAAAAAAAEAAgAGAAQAAAAAAAAAAAAGAAQAAAAHAAAAAQAGAAQAAAAHAAEAAwAGAAQAAAABAAAAAQAGAAQAAAADAAAAAQAGAAQAAAACAAAAAQAGAAQAAAAEAAAAAQAGAAQAAAAFAAAAAQAGAAQAAAAGAAAAAQAGAAQAAAAIAAAAAQAGAAQAAAAJAAAAAQAGAAQAAAAKAAAAAQAGAAQAAAALAAAAAQAGAAQAAAANAAAAAQAGAAQAAAAMAAAAAQAGAAQAAAAOAAAAAQAGAAQAAAABAAMAAQAGAAUAAAACAAMAAQAGAAUAAAADAAMAAQAGAAUAAAAEAAMAAQAGAAUAAAAFAAMAAQAGAAUAAAAGAAMAAQAGAAUAAAAHAAMAAQAGAAUAAAAIAAMAAQAGAAUAAAAJAAMAAQAGAAUAAAAKAAMAAQAGAAUAAAALAAMAAQAGAAUAAAAMAAMAAQAGAAUAAAANAAMAAQAGAAUAAAAOAAMAAQAGAAUAAAAAAAMAAAAGAAUAAAAPAAMAAAAHAAUAAAAPAAAAAAAHAAQAAAAAAAIAAgAGAAQAAAAPAAIAAgAHAAQAAAAPAAEAAgAHAAQAAAABAAIAAwAGAAQAAAACAAIAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/new_project"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAQAAAAAAAMAAAACAAUAAAAPAAMAAAADAAUAAAAPAAAAAAADAAQAAAAAAAEAAgACAAQAAAABAAMAAQACAAUAAAACAAMAAQACAAUAAAADAAMAAQACAAUAAAAEAAMAAQACAAUAAAAFAAMAAQACAAUAAAAGAAMAAQACAAUAAAAHAAMAAQACAAUAAAAIAAMAAQACAAUAAAAJAAMAAQACAAUAAAAKAAMAAQACAAUAAAALAAMAAQACAAUAAAAMAAMAAQACAAUAAAANAAMAAQACAAUAAAAOAAMAAQACAAUAAAABAAAAAQACAAQAAAACAAAAAQACAAQAAAADAAAAAQACAAQAAAAEAAAAAQACAAQAAAAFAAAAAQACAAQAAAAGAAAAAQACAAQAAAAHAAAAAQACAAQAAAAIAAAAAQACAAQAAAAJAAAAAQACAAQAAAAKAAAAAQACAAQAAAALAAAAAQACAAQAAAAMAAAAAQACAAQAAAANAAAAAQACAAQAAAAOAAAAAQACAAQAAAAAAAIAAgACAAQAAAAPAAIAAgADAAQAAAAPAAEAAgADAAQAAAABAAEAAwAGAAQAAAABAAIAAwAGAAQAAAACAAEAAwAGAAQAAAACAAIAAwAGAAQAAAADAAEAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAEAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAEAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAEAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAEAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="corner_hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/new_project"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAPAAAAAAABAAAAAAAAAAMAAAAAAAEAAAAPAAMAAAABAAEAAAA=")
tile_set = ExtResource("4_fl154")

[node name="Label" type="Label" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/new_project"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "New Project"
label_settings = SubResource("LabelSettings_g7m6i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="load_project" type="Button" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Load Project"
script = ExtResource("4_ryu81")

[node name="full" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/load_project"]
tile_map_data = PackedByteArray("AAABAAEAAwAGAAQAAAACAAEAAwAGAAQAAAADAAEAAwAGAAQAAAAEAAEAAwAGAAQAAAAFAAEAAwAGAAQAAAAGAAEAAwAGAAQAAAAAAAEAAgAGAAQAAAAAAAAAAAAGAAQAAAAHAAAAAQAGAAQAAAAHAAEAAwAGAAQAAAABAAAAAQAGAAQAAAADAAAAAQAGAAQAAAACAAAAAQAGAAQAAAAEAAAAAQAGAAQAAAAFAAAAAQAGAAQAAAAGAAAAAQAGAAQAAAAIAAAAAQAGAAQAAAAJAAAAAQAGAAQAAAAKAAAAAQAGAAQAAAALAAAAAQAGAAQAAAANAAAAAQAGAAQAAAAMAAAAAQAGAAQAAAAOAAAAAQAGAAQAAAABAAMAAQAGAAUAAAACAAMAAQAGAAUAAAADAAMAAQAGAAUAAAAEAAMAAQAGAAUAAAAFAAMAAQAGAAUAAAAGAAMAAQAGAAUAAAAHAAMAAQAGAAUAAAAIAAMAAQAGAAUAAAAJAAMAAQAGAAUAAAAKAAMAAQAGAAUAAAALAAMAAQAGAAUAAAAMAAMAAQAGAAUAAAANAAMAAQAGAAUAAAAOAAMAAQAGAAUAAAAAAAMAAAAGAAUAAAAPAAMAAAAHAAUAAAAPAAAAAAAHAAQAAAAAAAIAAgAGAAQAAAAPAAIAAgAHAAQAAAAPAAEAAgAHAAQAAAABAAIAAwAGAAQAAAACAAIAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/load_project"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAQAAAAAAAMAAAACAAUAAAAPAAMAAAADAAUAAAAPAAAAAAADAAQAAAAAAAEAAgACAAQAAAABAAMAAQACAAUAAAACAAMAAQACAAUAAAADAAMAAQACAAUAAAAEAAMAAQACAAUAAAAFAAMAAQACAAUAAAAGAAMAAQACAAUAAAAHAAMAAQACAAUAAAAIAAMAAQACAAUAAAAJAAMAAQACAAUAAAAKAAMAAQACAAUAAAALAAMAAQACAAUAAAAMAAMAAQACAAUAAAANAAMAAQACAAUAAAAOAAMAAQACAAUAAAABAAAAAQACAAQAAAACAAAAAQACAAQAAAADAAAAAQACAAQAAAAEAAAAAQACAAQAAAAFAAAAAQACAAQAAAAGAAAAAQACAAQAAAAHAAAAAQACAAQAAAAIAAAAAQACAAQAAAAJAAAAAQACAAQAAAAKAAAAAQACAAQAAAALAAAAAQACAAQAAAAMAAAAAQACAAQAAAANAAAAAQACAAQAAAAOAAAAAQACAAQAAAAAAAIAAgACAAQAAAAPAAIAAgADAAQAAAAPAAEAAgADAAQAAAABAAEAAwAGAAQAAAABAAIAAwAGAAQAAAACAAEAAwAGAAQAAAACAAIAAwAGAAQAAAADAAEAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAEAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAEAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAEAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAEAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="corner_hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/load_project"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAPAAAAAAABAAAAAAAAAAMAAAAAAAEAAAAPAAMAAAABAAEAAAA=")
tile_set = ExtResource("4_fl154")

[node name="Label" type="Label" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/load_project"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Load Project"
label_settings = SubResource("LabelSettings_g7m6i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings" type="Button" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Settings"
script = ExtResource("4_ryu81")

[node name="full" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/settings"]
tile_map_data = PackedByteArray("AAABAAEAAwAGAAQAAAACAAEAAwAGAAQAAAADAAEAAwAGAAQAAAAEAAEAAwAGAAQAAAAFAAEAAwAGAAQAAAAGAAEAAwAGAAQAAAAAAAEAAgAGAAQAAAAAAAAAAAAGAAQAAAAHAAAAAQAGAAQAAAAHAAEAAwAGAAQAAAABAAAAAQAGAAQAAAADAAAAAQAGAAQAAAACAAAAAQAGAAQAAAAEAAAAAQAGAAQAAAAFAAAAAQAGAAQAAAAGAAAAAQAGAAQAAAAIAAAAAQAGAAQAAAAJAAAAAQAGAAQAAAAKAAAAAQAGAAQAAAALAAAAAQAGAAQAAAANAAAAAQAGAAQAAAAMAAAAAQAGAAQAAAAOAAAAAQAGAAQAAAABAAMAAQAGAAUAAAACAAMAAQAGAAUAAAADAAMAAQAGAAUAAAAEAAMAAQAGAAUAAAAFAAMAAQAGAAUAAAAGAAMAAQAGAAUAAAAHAAMAAQAGAAUAAAAIAAMAAQAGAAUAAAAJAAMAAQAGAAUAAAAKAAMAAQAGAAUAAAALAAMAAQAGAAUAAAAMAAMAAQAGAAUAAAANAAMAAQAGAAUAAAAOAAMAAQAGAAUAAAAAAAMAAAAGAAUAAAAPAAMAAAAHAAUAAAAPAAAAAAAHAAQAAAAAAAIAAgAGAAQAAAAPAAIAAgAHAAQAAAAPAAEAAgAHAAQAAAABAAIAAwAGAAQAAAACAAIAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/settings"]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAQAAAAAAAMAAAACAAUAAAAPAAMAAAADAAUAAAAPAAAAAAADAAQAAAAAAAEAAgACAAQAAAABAAMAAQACAAUAAAACAAMAAQACAAUAAAADAAMAAQACAAUAAAAEAAMAAQACAAUAAAAFAAMAAQACAAUAAAAGAAMAAQACAAUAAAAHAAMAAQACAAUAAAAIAAMAAQACAAUAAAAJAAMAAQACAAUAAAAKAAMAAQACAAUAAAALAAMAAQACAAUAAAAMAAMAAQACAAUAAAANAAMAAQACAAUAAAAOAAMAAQACAAUAAAABAAAAAQACAAQAAAACAAAAAQACAAQAAAADAAAAAQACAAQAAAAEAAAAAQACAAQAAAAFAAAAAQACAAQAAAAGAAAAAQACAAQAAAAHAAAAAQACAAQAAAAIAAAAAQACAAQAAAAJAAAAAQACAAQAAAAKAAAAAQACAAQAAAALAAAAAQACAAQAAAAMAAAAAQACAAQAAAANAAAAAQACAAQAAAAOAAAAAQACAAQAAAAAAAIAAgACAAQAAAAPAAIAAgADAAQAAAAPAAEAAgADAAQAAAABAAEAAwAGAAQAAAABAAIAAwAGAAQAAAACAAEAAwAGAAQAAAACAAIAAwAGAAQAAAADAAEAAwAGAAQAAAADAAIAAwAGAAQAAAAEAAEAAwAGAAQAAAAEAAIAAwAGAAQAAAAFAAEAAwAGAAQAAAAFAAIAAwAGAAQAAAAGAAEAAwAGAAQAAAAGAAIAAwAGAAQAAAAHAAEAAwAGAAQAAAAHAAIAAwAGAAQAAAAIAAEAAwAGAAQAAAAIAAIAAwAGAAQAAAAJAAEAAwAGAAQAAAAJAAIAAwAGAAQAAAAKAAEAAwAGAAQAAAAKAAIAAwAGAAQAAAALAAEAAwAGAAQAAAALAAIAAwAGAAQAAAAMAAEAAwAGAAQAAAAMAAIAAwAGAAQAAAANAAEAAwAGAAQAAAANAAIAAwAGAAQAAAAOAAEAAwAGAAQAAAAOAAIAAwAGAAQAAAA=")
tile_set = ExtResource("4_fl154")

[node name="corner_hover" type="TileMapLayer" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/settings"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAPAAAAAAABAAAAAAAAAAMAAAAAAAEAAAAPAAMAAAABAAEAAAA=")
tile_set = ExtResource("4_fl154")

[node name="Label" type="Label" parent="Camera2D/main_ui/HBoxContainer/VBoxContainer/settings"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0
text = "Settings"
label_settings = SubResource("LabelSettings_g7m6i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="audio_hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_esgvy")
bus = &"SFX"

[node name="audio_select" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_44t26")
bus = &"SFX"
